# binance-data-downloader

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  main.py  pyproject.toml  setup.py
src/: __init__.py
src/cli/: cli.py
src/directory_tree/: base.py  binance.py
src/downloader/: base.py  checksum.py  http_downloader.py
tests/: test_cli.py  test_directory_tree.py  test_downloader.py
