[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "binance-data-downloader"
version = "0.1.2"
description = "A command-line tool for downloading cryptocurrency data from Binance"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Zhaorong Dai", email = "13710247598@163.com" }]
keywords = ["cryptocurrency", "data", "downloader", "binance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiofiles>=24.1.0",
    "asyncio>=3.4.3",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "prompt-toolkit>=3.0.51",
    "tqdm>=4.67.1",
    "xmltodict>=0.14.2",
    "zipfile36>=0.1.3",
]

[project.urls]
"Homepage" = "https://github.com/BaigeiMaster/binance-data-downloader"
"Bug Tracker" = "https://github.com/BaigeiMaster/binance-data-downloader/issues"

[project.scripts]
binance-data-downloader = "src.cli.cli:main"
